syntax = "proto3";

// 定义包名
option go_package = "/domain/po";

// 定义'ES索引映射'结构
message EsIndexMapping {
  string column = 1; // 数据库列名称
  string esField = 2;    // 映射后的ES字段名称
  string esType = 3;    // ES字段类型
  string esAnalyzer = 4;// ES分词器
}

// 定义'转换规则'结构
message TransformRule {
  uint64 id = 1;
  int32 type = 2;  //0规则 1脚本
  int32 receiveType = 3;//0:insert&update&delete  1:insert&update 2:insert&delete 3:insert
  uint64 pipelineInfoId = 4;
  int32 endpointType = 5;
  // ===================== read =============================
  string schema = 6;
  string table = 7;
  int32 columnNameFormatter = 8;                           //列名转换格式 0:列名称转为小写 1:列名称转为大写 2:列名称下划线转驼峰
  repeated string excludeColumnList = 9;          // 排除掉的列
  map<string, string> columnNameMapping = 10;  // 列名称映射
  map<string, string>   additionalColumnValueMapping = 11;  // 附加的字段和值
  int32 dataEncoder = 12;                  //数据编码类型，0: json、 1:表达式
  string dataExpression = 13;               //数据expression,{id}表示字段id的值、{name}表示字段name的值
  string dateFormatter = 14; //date类型格式化， 不填写默认2006-01-02
  string datetimeFormatter = 15; //datetime、timestamp类型格式化，不填写默认RFC3339(2006-01-02T15:04:05Z07:00)
  bool  reserveCoveredData = 16;   // 保留update之前的数据
  string orderColumn = 17;                                 // 排序列
  // ===================== write =============================
  // redis
  int32 redisStructure = 18;          //对应redis的5种数据类型 1:String、2:Hash(字典) 、3:List(列表) 、4:Set(集合)、5:Sorted Set(有序集合)
  string redisKeyPrefix = 19;     //key的前缀
  int32 redisKeyBuilder = 20;      //key生成方式，0:使用列值(默认使用主键)、1:表达式、2固定值
  string redisKeyColumn = 21;          //key生成方式，使用列值，默认使用主键
  string redisKeyExpression = 22;        // key生成方式，格式化,如{id}-{name}；{id}表示字段id的值、{name}表示字段name的值
  string redisKeyFixValue = 23;         // key固定值
  string redisHashFieldPrefix = 24;      // hash的field前缀，仅redis_structure为hash时起作用
  string redisHashFieldColumn = 25;      // 使用哪个列的值作为hash的field，仅redis_structure为hash时起作用
  string redisSortedSetScoreColumn = 26; // Sorted Set(有序集合)的Score

  // mongodbRule
  string mongodbDatabase = 27; //mongodb database 不能为空
  string mongodbCollection = 28; //mongodb collection，可以为空，默认使用表(Table)名称

  // elasticsearch
  int32 esIndexBuildType = 29;           //Index名称创建方式，0使用已经存在的、1自动创建
  string esIndexName = 30;           //Index名称,可以为空，默认使用表(Table)名称
  //string esType          =31;         //es6.x以后一个Index只能拥有一个Type,可以为空，默认使用_doc; es7.x版本此属性无效
  repeated EsIndexMapping esIndexMappings = 32; //Elasticsearch mappings映射关系,可以为空，为空时根据数据类型自己推导

  // Rocketmq Kafka Rabbitmq
  string mqTopic = 33; // topic名称，可以为空，为空时使用表名称
  // HTTP 参数名称
  string    httpParameterName = 34; // http参数名称
  bool httpReserveRawData = 35; // 保留update之前的数据

  // =============================  LUA  ==============================================
  string    LuaScript = 36;  //lua 脚本
}
